K8S/common-dpl.yaml
apiVersion: v1
kind: Service
metadata:
  name: common-svc
spec:
  type: NodePort
  selector:
    app: common-pod
  ports:
    - name: customer-port-mapping
      protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30090
    - name: admin-port-mapping
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: common-pod
  name: common-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: common-pod
  template:
    metadata:
      labels:
        app: common-pod
    spec:
      containers:
      - image: nivedsuresh/vnilusso-customer:1.0
        name: customer
        volumeMounts:
          - name: product-images
            mountPath: /workspace/product-images
        ports:
          - containerPort: 8081
      - image: nivedsuresh/vnilusso-admin:1.1
        name: admin
        volumeMounts:
          - name: product-images
            mountPath: /workspace/product-images
        ports:
          - containerPort: 8080
      volumes:
        - name: product-images
          persistentVolumeClaim:
            claimName: images-pvc
